# Job_tracker_mcp_agentic

./: ASSIGNMENT_PROMPTS.txt  README.md  pyproject.toml
client/: __init__.py  agent.py  app.py  mcp_utils.py
client/static/: prefab_dashboard.html
client/web/: __init__.py  __main__.py  app.py
data/: jobs.json  user_profile.json
src/job_tracker_mcp/: __init__.py  adzuna.py  agent_demo.py  agent_trace.py  dashboard.py  deadlines.py  followup.py  intel.py  paths.py  scoring.py  server.py  storage.py  user_fit.py  user_profile.py
src/job_tracker_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
